crates/vexor-compiler/tests/golden/error/output/no_export.err
parse error at line 3, column 19
  |
3 | let c = Circle(r)
  |                   ^
invalid keyword 'export'